
    * Added ``bzr help topics`` to the bzr help system. This gives a
      location for general information, outside of a specific command.
      This includes updates for ``bzr help revisionspec`` the first topic
      included. (Goffredo Baroncelli, John Arbash Meinel, #42714)
      
    * WSGI-compatible HTTP smart server.  See ``doc/http_smart_server.txt``.
      (Andrew Bennetts)

  INTERNALS:

    * New -D option given before the command line turns on debugging output
      for particular areas.  -Derror shows tracebacks on all errors.
      (Martin Pool)

    * Clean up ``bzr selftest --benchmark bundle`` to correct an import,
      and remove benchmarks that take longer than 10min to run.
      (John Arbash Meinel)

    * Use ``time.time()`` instead of ``time.clock()`` to decide on
      progress throttling. Because ``time.clock()`` is actually CPU time,
      so over a high-latency connection, too many updates get throttled.
      (John Arbash Meinel)

    * ``MemoryTransport.list_dir()`` would strip the first character for
      files or directories in root directory. (John Arbash Meinel)
  
    * New ``ChrootTransportDecorator``, accessible via the ``chroot+`` url
      prefix.  It disallows any access to locations above a set URL.  (Andrew
      Bennetts)

  BUG FIXES:

    * ``bzrlib/bzrdir.py`` was directly referencing ``bzrlib.workingtree``,
      without importing it. This prevented ``bzr upgrade`` from working
      unless a plugin already imported ``bzrlib.workingtree``
      (John Arbash Meinel, #70716)

    * Suppress the traceback on invalid URLs (Vincent Ladeuil, #70803).

    * Give nicer error message when an http server returns a 403
      error code. (Vincent Ladeuil, #57644).

    * When a multi-range http GET request fails, try a single
      range one. If it fails too, forget about ranges. Remember that until 
      the death of the transport and propagates that to the clones.
      (Vincent Ladeuil, #62276, #62029).
